...

                    <ImageView
                        android:id="@+id/ivFoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNama"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutTanggalLahir"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
...

                        <AutoCompleteTextView
                            android:id="@+id/tvTanggalLahir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutJenisKelamin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
...

                        <AutoCompleteTextView
                            android:id="@+id/tvJenisKelamin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNomorTelepon"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNomorTelepon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutKonfirmasiPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etKonfirmasiPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
...
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="Register" />

        </LinearLayout>
...
