<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKamera"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buka Kamera"
            app:icon="@drawable/ic_baseline_photo_camera_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGaleri"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buka Galeri"
            app:icon="@drawable/ic_baseline_photo_library_24" />
    </LinearLayout>

</androidx.cardview.widget.CardView>